--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,15 +1,4 @@
-workflows:
-  ios-capacitor-workflow:
-    name: Aslam AI Menu iOS Build
-    max_build_duration: 60
-    instance_type: mac_mini_m1
-    environment:
-      groups:
-        - ios_configs # Matches your variable group in the UI
-      node: latest
-      xcode: latest
-      cocoapods: default
-    scripts:
+scripts:
       - name: Install dependencies
         script: |
           npm install
@@ -18,6 +7,7 @@ workflows:
           npm run build
       - name: Generate export_options.plist
         script: |
+          # This creates the file from your environment variable
           echo $EXPORT_OPTIONS_PLIST | base64 --decode > ios/App/export_options.plist
       - name: Capacitor Sync
         script: |
@@ -25,9 +15,9 @@ workflows:
       - name: Install CocoaPods
         script: |
           cd ios/App && pod install
-      - name: Set up code signing settings
+      - name: Set up code signing
         script: |
-          # This command maps your uploaded profiles to the Xcode project
+          # IMPORTANT: This installs the .p12 and .mobileprovision files you uploaded
           xcode-project use-profiles
       - name: Build iOS Project
         script: |
@@ -35,5 +25,3 @@ workflows:
             --workspace "ios/App/App.xcworkspace" \
             --scheme "App" \
             --export-options-plist "ios/App/export_options.plist"
-    artifacts:
-      - build/ios/ipa/*.ipa
